# Chip8-emulator

./: CMakeLists.txt
src/: Chip8.cpp  Chip8.hpp  main.cpp
